3nd page fix on mobile

--- a/src/sass/global/garden.scss
+++ b/src/sass/global/garden.scss
@@ -20,6 +20,12 @@
 		position: absolute;
 		left: 25%;
 		top: 20%;
+		@media (max-width: $screen-sm-max) {
+			width: 80%;
+			height: 100%;
+			left: 10%;
+			top: 0;
+		}
 	}
 	&-btn{
 
